fix: change gap 20 in .list

--- a/lesson_13/css/style.css
+++ b/lesson_13/css/style.css
@@ -231,7 +231,7 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	gap: 141px;
+	gap: 20px;
 }
 
 .list__item {
